--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,26 @@ LINE_CHANNEL_SECRET=
 SERPAPI_TIMEOUT=
 SERPAPI_API_KEY=
 SERPAPI_LOCATION=
+
+# Recommended for most uses
+DATABASE_URL=postgres://neondb_owner:RDy7wgaG0VMb@ep-noisy-star-a4w3j4bh-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:RDy7wgaG0VMb@ep-noisy-star-a4w3j4bh.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# Parameters for constructing your own connection string
+PGHOST=ep-noisy-star-a4w3j4bh-pooler.us-east-1.aws.neon.tech
+PGHOST_UNPOOLED=ep-noisy-star-a4w3j4bh.us-east-1.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=RDy7wgaG0VMb
+
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=postgres://neondb_owner:RDy7wgaG0VMb@ep-noisy-star-a4w3j4bh-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:RDy7wgaG0VMb@ep-noisy-star-a4w3j4bh.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-noisy-star-a4w3j4bh-pooler.us-east-1.aws.neon.tech
+POSTGRES_PASSWORD=RDy7wgaG0VMb
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgres://neondb_owner:RDy7wgaG0VMb@ep-noisy-star-a4w3j4bh-pooler.us-east-1.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgres://neondb_owner:RDy7wgaG0VMb@ep-noisy-star-a4w3j4bh-pooler.us-east-1.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=15&sslmode=require
